Of course! I'd be happy to review these changes for you. This is a substantial update that introduces a robust JWT-based authentication and authorization layer to your application. It's a great step forward for security!
Here are my thoughts and suggestions on the provided diff.

### General Observations

This is a well-executed feature implementation. You've successfully integrated Spring Security with JWT, added method-level security, implemented logging with Log4j2, and even improved your REST API design with pagination and proper HTTP status codes.

I have a few key recommendations, primarily around security and code correctness, that will make this implementation even stronger.

---

### 🚨 Security Recommendations

#### 1. Conflicting Security Rules

There's a conflict between your global HTTP security rules and your method-level security.

*   In `SecurityConfig.java`, you have:
    ```java
    .antMatchers("/api/v1/anti-heroes/**").permitAll() // Allow access to anti-heroes endpoints
    ```
*   However, in `AntiHeroController.java`, you've secured all endpoints with:
    ```java
    @PreAuthorize("isAuthenticated()")
    ```

The `permitAll()` in `SecurityConfig` takes precedence, meaning the `anti-heroes` endpoints are currently public and unprotected, despite the `@PreAuthorize` annotation.

**Suggestion:**
To enforce authentication for the anti-hero endpoints, change `permitAll()` to `authenticated()` in your security configuration.

```java
// src/main/java/com/example/backend/config/SecurityConfig.java

@Override
protected void configure(HttpSecurity http) throws Exception {
    http
        .cors().and()
        .csrf().disable()
        // This is the line to change
        .authorizeRequests().antMatchers("/api/v1/anti-heroes/**").authenticated()
        .anyRequest().permitAll() // Allow other requests like /register and /authenticate
        .and()
        .sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS);
    http.addFilt